--- a/survey-form/styles.css
+++ b/survey-form/styles.css
@@ -15,6 +15,7 @@ body {
    font-size: 1.6rem;
    background-color: #d9efed;
    color: #222;
+   padding: 0 5px;
 }
 
 .container {
@@ -106,6 +107,7 @@ input[type="checkbox"] {
 .dropdown {
    min-height: 2rem;
    padding: 1rem 0;
+   background-color: transparent;
    border: 1px solid #bcb9b9;
    color: #767676;
 }
