--- a/technical-documentation-page/styles.css
+++ b/technical-documentation-page/styles.css
@@ -39,9 +39,9 @@ a:hover {
 }
 
 .sidebar {
-   height: 200px;
-   border-bottom: 2px solid #888;
+   height: 210px;
    overflow: auto;
+   box-shadow: 2px 0 3px rgba(0,0,0,0.5);
 }
 
 .logo {
@@ -72,12 +72,12 @@ a:hover {
 }
 
 .content {
-   padding: 2.5em 1.5em;
+   padding: 2em 1.5em;
 }
 
 .main-section__heading {
    font-size: 1.75rem;
-   font-weight: 300;
+   font-weight: 400;
    color: var(--color-primary);
    padding-block: 0.5em;
 }
@@ -123,8 +123,7 @@ a:hover {
       max-width: 350px;
       width: 100%;
       height: 100vh;
-      border-right: 2px solid #888;
-      border-bottom: none;
+      box-shadow: 0 2px 3px rgba(0,0,0,0.5);
    }
    
    .primary-nav {
