--- a/technical-documentation-page/styles.css
+++ b/technical-documentation-page/styles.css
@@ -92,7 +92,7 @@ a:hover {
 
 .main-section__pre {
    background-color: #eee;
-   padding-inline: 4em;
+   padding-inline: 2em;
    margin-block: 1em;
 }
 
@@ -139,5 +139,9 @@ a:hover {
       top: 0;
       left: 350px;
       padding: 2em 3.5em;
+   }
+
+   .main-section__pre {
+      padding-inline: 4em;
    }
 }
