--- a/product-landing-page/styles.css
+++ b/product-landing-page/styles.css
@@ -4,6 +4,10 @@
 
 :root {
 
+   /* Width */
+   --max-width: calc(1200rem / 16);
+   --width-650: calc(650rem / 16);
+
    /* Colors */
    --color-white: #fff;
    --color-white-200: #f1f1f1;
@@ -11,7 +15,6 @@
 
    --color-gray-400: #222;
    --color-gray-200: #444;
-   --color-gray-100: #888; 
 
    --color-primary: #db7414;
 
@@ -162,7 +165,7 @@ ol[role=list] {
 }
 
 .container {
-   width: min(calc(1200rem / 16), 100% - 2em);
+   width: min(var(--max-width), 100% - 2em);
    margin-inline: auto;
 }
 
@@ -187,7 +190,7 @@ ol[role=list] {
 
 @media (min-width: 25em) {
    .container {
-      width: min(calc(1200rem / 16), 100% - 3em);
+      width: min(var(--max-width), 100% - 3em);
       margin-inline: auto;
    }
    
@@ -214,6 +217,14 @@ ol[role=list] {
    background-color: #FFC857;
    padding: 0.75em 3em;
    cursor: pointer;
+   opacity: 1;
+   transition: all 0.2s;
+}
+
+.btn__cta:hover,
+.btn__cart:hover,
+.btn__contact:hover {
+   opacity: 0.9;
 }
 
 .btn__contact {
@@ -309,6 +320,11 @@ body {
    font-size: var(--fs-16);
    text-decoration: none;
    color: var(--color-white);
+   transition: all 0.2s;
+}
+
+.main-nav__link:hover {
+   color: var(--color-white-200);
 }
 
 .btn__menu {
@@ -352,11 +368,20 @@ body {
    .btn__close-menu {
       display: none;
       position: absolute;
-      top: 2.5rem;
-      right: 2.5rem;
+      top: 2.75rem;
+      right: 1.5rem;
       z-index: 10;
       width: 1.65rem;
    }
+}
+
+@media (max-width: 25em) {
+
+   .btn__close-menu {
+      top: 2.5rem;
+      right: 1rem;
+   }
+
 }
 
 /* --------------------------------------------------------------------------- */
@@ -365,6 +390,7 @@ body {
 
 .hero {
    display: grid;
+   align-content: space-evenly;
    gap: 3em;
    padding-block: 3em;
 }
@@ -381,12 +407,12 @@ body {
    color: var(--color-white-200);
    margin-block: 1em;
    margin-inline: auto;
-   max-width: calc(650rem / 16);
+   max-width: var(--width-650);
 }
 
 .hero__video {
    margin-inline: auto;
-   max-width: calc(650rem / 16);
+   max-width: var(--width-650);
 }
 
 @media (min-width: 28em) {
@@ -419,7 +445,7 @@ body {
 
 .process__image-box,
 .process__content-box {
-   max-width: calc(650rem / 16);
+   max-width: var(--width-650);
    margin-inline: auto;
 }
 
@@ -474,7 +500,7 @@ body {
    background-size: cover;
    background-position: center;
    background-attachment: fixed;
-   padding: 6em 3em;
+   padding: 6em 2em;
 }
 
 .cta__wrapper {
@@ -494,6 +520,11 @@ body {
 }
 
 @media (min-width: 28em) {
+
+   .cta {
+      padding: 6em 3em;
+   }
+
    .cta__text {
       font-size: var(--fs-16);
    }
@@ -510,12 +541,17 @@ body {
 
 .product-card {
    text-align: center;
-   max-width: calc(650rem / 16);
+   max-width: var(--width-650);
    margin-inline: auto;
+   display: grid;
+   grid-template-rows: auto 1fr;
+   justify-items: center;
 }
 
-.product-card__img {
-   margin-inline: auto;
+.product-card__content-box {
+   display: grid;
+   grid-template-rows: auto auto 1fr auto;
+   justify-items: center;
 }
 
 .product-card__title {
@@ -574,12 +610,12 @@ body {
    }
    
    .gallery__img {
-      transform: scale(1);
+      transform: scale(1.01);
       transition: all 0.8s;
    }
    
    .gallery__img:hover {
-      transform: scale(1.05);
+      transform: scale(1.1);
    }
 }
 
@@ -599,7 +635,7 @@ body {
    padding: 2.5em 1em;
    border-radius: 0.5em;
    box-shadow: 0 0 2px 1px rgba(0,0,0,0.1);
-   max-width: calc(650rem / 16);
+   max-width: var(--width-650);
    margin-inline: auto;
 }
 
@@ -634,7 +670,7 @@ body {
 }
 
 .faq__wrapper {
-   max-width: calc(650rem / 16);
+   max-width: var(--width-650);
    margin-inline: auto;
 }
 
